Fri Apr  5 15:25:18 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Execution_Visitor_T.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Execution_Visitor_T.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Generators_T.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_Generators_T.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/cpp/Behavior_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/cpp/Behavior_Generator.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/cpp/Behavior_Generator.cpp:

          Fixed various loop code generation for default implementations in
          cpp.  Thanks Marianne!

Thu Apr  4 17:37:53 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/tcpip/compiler/Event_Traits.h:
        * cuts/iccm/arch/tcpip/compiler/Event_Traits.cpp:

          Updated event generation to support packages/modules.

Thu Apr  4 17:28:50 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/tao/compiler/Event_Traits.cpp:

          Removed comments/dead code

Thu Apr  4 17:26:22 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/arch/ccm/CCM_Event_Handler_T.cpp:

          Removed a debugging statement

        * cuts/iccm/arch/tao/compiler/Event_Traits.h:
        * cuts/iccm/arch/tao/compiler/Event_Traits.cpp:
        * cuts/iccm/arch/tao/compiler/Stub_File.cpp:

          Updated event generation to support packages/modules.

Thu Apr  4 17:11:57 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/rtidds/compiler/Downcall_Event.h:
        * cuts/iccm/arch/rtidds/compiler/Downcall_Event.cpp:
        * cuts/iccm/arch/rtidds/compiler/Event_Traits.h:
        * cuts/iccm/arch/rtidds/compiler/Event_Traits.cpp:
        * cuts/iccm/arch/rtidds/compiler/Stub_File.cpp: